admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: logs.massivecreationlab.com
      http:
        paths:
          - path: /*
            backend:
              service:
                name: kibana
                port:
                  number: 5601
    - host: argo.massivecreationlab.com
      http:
        paths:
          - path: /*
            backend:
              service:
                name: argo-cd-1658676354-server
                port:
                  number: 80
